# Dijkstra-Expression-Evaluation-Algorithm-With-Haskell-Cabal-Docker-Compose-EditorConfig-Bash-Script

./: .gitignore  README.md  dockerfile  expression-evaluator.cabal
app/: ArithmeticParser.hs  ExpressionEvaluator.hs  ExpressionParser.hs  Main.hs  ParenthesesParser.hs
